tried background image? about page, navigation

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     width: 1024px;
     margin-left: auto;
     margin-right: auto;
+    background: url(photo-landscape.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #logo {
@@ -9,4 +14,6 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
+
+
 }
