--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
+body{
+    margin: 0px;
+}
+
 #main_container {
     width: 1024px;
     margin-left: auto;
     margin-right: auto;
-    background: url(photo-landscape.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-image: url(../images/photo-landscape.jpg);
     background-size: cover;
 }
 
