--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,29 @@
+html {
+  background: url(../images/photo-landscape.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 body{
     margin: 0px;
-    background-image: url(../images/photo-landscape.jpg);
-    background-size: cover;
 }
-
 #main_container {
     width: 1024px;
     margin-left: auto;
     margin-right: auto;
 }
-
 #logo {
     width: 160px;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-
-
+    float: right;
+    width: 154px;
+    margin: auto;
+}
+#box {
+    width: 760px;
+    height: 372px;
+    border-color: aliceblue;
+    border-width: ;
+    border-style: solid;
+    margin: auto;
 }
