--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,19 @@ body {
 h5 {
     font-family: avenir next, sans-serif;
     color: snow;
+    position: relative;
+    left: 540px;
+    top: 100px;
 }
-h1 {
-    font-family: lobster, sans-serif;
-    font-size: 70px;
+#mg {
+    position: relative;
+    left: 270px;
+    top: 140px;
 }
 #logo {
     width: 160px;
     float: right;
-    margin-top: -120px;
+    margin-top: -170px
 }
 .box {
     width: 760px;
@@ -44,7 +48,7 @@ h1 {
     border-width: thin;
     padding: 30px;
     position: relative;
-    top: -220px;
+    top: -170px;
 }
 li {
     float: left;
@@ -54,7 +58,7 @@ ul {
     position: absolute;
     top: 0;
     margin-top: 140px;
-    margin-left: 104px;
+    margin-left: 85px;
 }
 a {
     display: block;
