literally what just happened

--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -14,7 +14,7 @@ body {
     margin-right: auto;
 }
 blockquote {
-    font-family: avenir next, sans-serif;
+    font-family: papyrus, sans-serif;
     font-size: 30px
 }
 h4 {
