--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
-    background: url(../images/photo-landscape.jpg) no-repeat center center fixed;
+/*    background: url(../images/photo-landscape.jpg) no-repeat center center fixed;*/
+    background-color: orange;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -9,9 +10,10 @@ body {
     margin: 0px;
 }
 #main_container {
-    width: 1024px;
+    width: 960px;
     margin-left: auto;
     margin-right: auto;
+    border: solid 1px white;
 }
 h5 {
     font-family: avenir next, sans-serif;
@@ -48,23 +50,33 @@ h5 {
     border-width: thin;
     padding: 30px;
     position: relative;
-    top: -170px;
+    top: -410px;
+    left: 130px
 }
+/*start of nav bar*/
 li {
     float: left;
     list-style-type: none;
 }
-ul {
-    position: absolute;
+.navlinks {
+    float: left;
     top: 0;
-    margin-top: 140px;
-    margin-left: 85px;
+    margin-top: -950px;
+    margin-left: 320px;
+}
+nav {
+    height: 40px;
+    width: 800px;
+    position: absolute;
+    border: solid 1px white;
+
 }
 a {
     display: block;
     padding-right: 70px;
     padding-left: 70px;
-    color:snow;
+    color: snow;
     text-decoration: none;
     font-family: avenir next, sans-serif;
 }
+/*end of nav bar*/
