--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-/*    background: url(../images/photo-landscape.jpg) no-repeat center center fixed;*/
+    background: url(../images/photo-landscape.jpg) no-repeat center center fixed;
     background-color: orange;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -13,7 +13,6 @@ body {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
-    border: solid 1px white;
 }
 h5 {
     font-family: avenir next, sans-serif;
@@ -24,13 +23,13 @@ h5 {
 }
 #mg {
     position: relative;
-    left: 270px;
+    left: 250px;
     top: 140px;
 }
 #logo {
     width: 160px;
     float: right;
-    margin-top: -170px
+    margin-top: -200px
 }
 .box {
     width: 760px;
@@ -51,7 +50,8 @@ h5 {
     padding: 30px;
     position: relative;
     top: -410px;
-    left: 130px
+    left: 98px;
+    z-index: -1;
 }
 /*start of nav bar*/
 li {
@@ -60,16 +60,13 @@ li {
 }
 .navlinks {
     float: left;
-    top: 0;
-    margin-top: -950px;
-    margin-left: 320px;
+    margin-left: 50px;
 }
 nav {
-    height: 40px;
-    width: 800px;
+    height: 90px;
+    width: 910px;
     position: absolute;
-    border: solid 1px white;
-
+    top: 120px;
 }
 a {
     display: block;
