--- a/css/portfoliostyle.css
+++ b/css/portfoliostyle.css
@@ -18,3 +18,23 @@ a {
     font-family: avenir next, sans-serif;
 }
 /*end of nav bar*/
+p {
+    font-family: avenir next, sans-serif;
+    color: dimgray;
+}
+/*FIX THIS*/
+#port {
+    position: absolute;
+    top: -40px;
+    left: 30px;
+}
+.box {
+    width: 190px;
+    height: px;
+    border: #727272 solid thick;
+    margin: auto;
+    margin-top: 200px;
+    padding: 10px;
+    position: fixed;
+    left: 90px;
+}
