--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -25,6 +25,7 @@ blockquote {
     position: relative;
     bottom: 40px;
     right: 30px;
+    color: #565656;
 }
 .text {
     position: absolute;
@@ -39,8 +40,12 @@ h4 {
 p {
     font-family: avenir next, sans-serif;
     font-size: 14px;
-    width: 247px;
-} /*FIX THIS*/
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+    margin: auto;
+    margin-right: 67px;
+}
 /*start of nav bar*/
 li {
     float: left;
@@ -50,7 +55,7 @@ ul {
     position: absolute;
     top: 0;
     margin-top: 140px;
-    margin-left: 85px;
+    margin-left: 285px;
 }
 a {
     display: block;
@@ -59,7 +64,6 @@ a {
     color:dimgrey;
     text-decoration: none;
     font-family: avenir next, sans-serif;
-
 }
 /*end of nav bar*/
 .box {
