--- a/css/portfoliostyle.css
+++ b/css/portfoliostyle.css
@@ -7,7 +7,7 @@ ul {
     position: absolute;
     top: 0;
     margin-top: 140px;
-    margin-left: 85px;
+    margin-left: 285px;
 }
 a {
     display: block;
@@ -25,16 +25,50 @@ p {
 /*FIX THIS*/
 #port {
     position: absolute;
-    top: -40px;
-    left: 30px;
+    left: 50px;
+    top: 250px;
 }
 .box {
     width: 190px;
-    height: px;
     border: #727272 solid thick;
     margin: auto;
-    margin-top: 200px;
-    padding: 10px;
-    position: fixed;
-    left: 90px;
+    padding-left: 10px;
+    position: absolute;
+    left: 55px;
+    top: 355px;
+}
+.img, .img2, .img3, .img4, .img5, .img6, .img7, .img8, .img9 {
+    width: 250px;
+    background-color:darkgray;
+    position: relative;
+}
+.img {
+    height: 315px;
+    top: 350px;
+    left: 300px;
+}
+.img2 {
+    height: 250px;
+    top: 35px;
+    left: 570px;
+}
+.img3 {
+    height: 350px;
+    top: -215px;
+    left: 840px;
+}
+.img4 {
+    height: 350px;
+    top: -225px;
+    left: 300px;
+}
+.img5 {
+    height: 315px;
+    left: 570px;
+    top: -645px;
+}
+.img6 {
+    height: 250px;
+    left: 840px;
+    top: -860px;
 }
