--- a/css/portfoliostyle.css
+++ b/css/portfoliostyle.css
@@ -12,10 +12,17 @@ body {
     width: 1024px;
     margin-left: auto;
     margin-right: auto;
-}/*start of nav bar*/
+}
+/*start of nav bar*/
 li {
     float: left;
     list-style-type: none;
+}
+nav {
+    height: 90px;
+    width: 910px;
+    position: absolute;
+    top: 120px;
 }
 ul {
     position: absolute;
@@ -23,23 +30,24 @@ ul {
     margin-top: 140px;
     margin-left: 285px;
 }
-a {
+a.navlinks {
     display: block;
+    color: dimgrey;
     padding-right: 70px;
     padding-left: 70px;
-    color: dimgrey;
     text-decoration: none;
     font-family: avenir next, sans-serif;
-    transition-property: color;
+    transition-property: background-image -webkit-background-clip -webkit-text-fill;
     transition-duration: 1s;
     transition-timing-function: ease-out;
 }
-a:hover {
-    transition-property: color;
-    transition-duration: .5s;
-    transition-timing-function: ease-out;
-    color:white;
-    text-shadow: 2px 2px 1px #a5a5a5;
+a.navlinks:hover {
+    color: white;
+    background-image: url(../images/gasmen.melanie.resume001%20copy.jpg);
+    background-position: 35px 3px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
 }
 /*end of nav bar*/
 p {
