--- a/css/portfoliostyle.css
+++ b/css/portfoliostyle.css
@@ -13,6 +13,16 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+#header {
+    background: url(../images/photo-landscape.jpg) no-repeat center center fixed;
+    background-color: orange;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    max-width:3000px;
+    height: 200px;
+}
 /*start of nav bar*/
 li {
     float: left;
@@ -69,6 +79,7 @@ p {
     left: 55px;
     top: 355px;
 }
+/*FIX POSITION OF IMAGES LATER OH GOD*/
 .img, .img2, .img3 {
     width: 250px;
     background-color:darkgray;
@@ -76,17 +87,17 @@ p {
 }
 .img {
     height: 315px;
-    top: 350px;
+    top: 155px;
     left: 300px;
 }
 .img2 {
     height: 250px;
-    top: 35px;
+    top: -160px;
     left: 570px;
 }
 .img3 {
     height: 350px;
-    top: -215px;
+    top: -410px;
     left: 840px;
 }
 /* Style the Image Used to Trigger the Modal */
@@ -94,11 +105,10 @@ p {
     cursor: pointer;
     transition: 0.3s;
     left: 300px;
-    top: -230px;
+    top: -425px;
     position: relative;
 }
 #myImg:hover {opacity: 0.7;}
-
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -134,7 +144,6 @@ p {
     height: 150px;
     font-family: avenir next, sans-serif;
 }
-
 /* Add Animation - Zoom in the Modal */
 .modal-content, #caption {
     -webkit-animation-name: zoom;
@@ -142,17 +151,14 @@ p {
     animation-name: zoom;
     animation-duration: 0.6s;
 }
-
 @-webkit-keyframes zoom {
     from {-webkit-transform:scale(0)}
     to {-webkit-transform:scale(1)}
 }
-
 @keyframes zoom {
     from {transform:scale(0)}
     to {transform:scale(1)}
 }
-
 /* The Close Button */
 .close {
     position: absolute;
@@ -163,14 +169,12 @@ p {
     font-weight: bold;
     transition: 0.3s;
 }
-
 .close:hover,
 .close:focus {
     color: #bbb;
     text-decoration: none;
     cursor: pointer;
 }
-
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
     .modal-content {
