--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
+    align-content: center;
 }
 p {
     font-family: avenir next, sans-serif;
@@ -59,32 +60,29 @@ li {
     float: left;
     list-style-type: none;
 }
-.navlinks {
-    float: left;
-    margin-left: 50px;
-}
 nav {
     height: 90px;
     width: 910px;
     position: absolute;
     top: 120px;
+    padding-left: 30px;
 }
-a {
+a.navlinks {
     display: block;
+    color: white;
     padding-right: 70px;
     padding-left: 70px;
-    color: white;
     text-decoration: none;
     font-family: avenir next, sans-serif;
-    transition-property: color;
+    transition-property: background-image -webkit-background-clip -webkit-text-fill;
     transition-duration: 1s;
     transition-timing-function: ease-out;
 }
-a:hover {
-    transition-property: color;
-    transition-duration: .5s;
-    transition-timing-function: ease-out;
-    color:#d8d8d8;
-    text-shadow: 2px 2px 1px #a5a5a5;
+a.navlinks:hover {
+    color: darkgrey;
+    background-image: url(../images/gasmen.melanie.resume001%20copy.jpg);
+    background-position: 35px 3px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 /*end of nav bar*/
