--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -35,7 +35,7 @@ body {
 #moi {
     position: relative;
     left: 100px;
-    top: 180px;
+    top: 10px;
     border: dimgrey 5px solid;
     opacity: 0.85;
 }
@@ -77,6 +77,14 @@ a.navlinks:hover {
 
 }
 /*end of nav bar*/
+h4 {
+    font-family: avenir next, sans-serif;
+    font-size: 36px;
+    color:#31478b;
+    position: relative;
+    top: 100px;
+    left: 400px;
+}
 /*start of contact form*/
 input[type=text], select, textarea {
     background-color: #b8d7e4;
@@ -105,8 +113,8 @@ input[type=submit]:hover {
     margin: auto;
     padding: 20px;
     width: 700px;
-    position:relative;
-    left: 90px;
-    top:-205px;
+    position: relative;
+    top: -300px;
+    margin-left: 380px;
 }
 /*end of contact form*/
