--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -13,6 +13,11 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+#navbar {
+    position: fixed;
+    top: 0;
+    margin-top: auto;
+}
 #header {
     background: url(../images/photo-landscape.jpg) no-repeat center center fixed;
     background-color: orange;
