--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ nav {
     position: absolute;
     top: 120px;
     padding-left: 30px;
+    overflow: hidden;
 }
 a.navlinks {
     display: block;
