--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -25,6 +25,7 @@ body {
     width: 100%;
     overflow: hidden;
     z-index: 3;
+    box-shadow: 0px 2px 10px 0px gray;
 }
 #logo {
     position: absolute;
