--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,27 @@
 html {
-    background: url(../images/photo-landscape.jpg) no-repeat center center fixed;
+
+}
+body {
+    margin: 0px;
+      background: url(../images/photo-landscape.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+/*    width: 100vw;*/
 }
 body {
     margin: 0px;
 }
+#contain-contain {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
 #main_container {
     width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-    align-content: center;
+    align-self: center;
 }
 p {
     font-family: avenir next, sans-serif;
@@ -35,9 +44,7 @@ p {
 .box {
     width: 760px;
     height: 372px;
-    border-color: snow;
-    border-style: solid;
-    border-width: thick;
+    border: snow solid thick;
     margin: auto;
     margin-top: 200px;
     padding: 30px;
