--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body {
 #main_container {
     width: 960px;
     align-self: center;
+    height: 800px;
 }
 p {
     font-family: avenir next, sans-serif;
