--- a/css/portfoliostyle.css
+++ b/css/portfoliostyle.css
@@ -95,6 +95,10 @@ p {
     margin: auto;
     margin-top: 200px;
 }
+.column {
+    display: flex;
+    flex-direction: column;
+}
 /* Style the Image Used to Trigger the Modal */
 .image {
     cursor: pointer;
