--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -14,7 +14,7 @@ body {
     margin-right: auto;
 }
 #header {
-    background: url(../images/photo-landscape.jpg) no-repeat center center fixed;
+    background: url(../images/DSC_06512.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
