--- a/css/portfoliostyle.css
+++ b/css/portfoliostyle.css
@@ -14,7 +14,7 @@ body {
     margin-right: auto;
 }
 #header {
-    background: url(../images/photo-landscape.jpg) no-repeat center center fixed;
+    background: url(../images/DSC_06512.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -88,16 +88,33 @@ p {
     left: 55px;
     top: 355px;
 }
-/*FIX POSITION OF IMAGES LATER OH GOD*/
+/*FIX POSITION OF IMAGES LATER*/
+
 .works {
-    position: absolute;
-    left: 50px;
-    margin: auto;
-    margin-top: 200px;
+    margin-left: 350px;
+    margin-top: 335px;
+    margin-right: 50px;
+    justify-content: space-around;
 }
-.column {
+.works_container {
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
+    flex-flow: wrap;
+}
+
+.column_item {
+    margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    width:30%; /* you can use % */
+    height: 30%;
+    justify-content: flex-start;
+
+
 }
 /* Style the Image Used to Trigger the Modal */
 .image {
