--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -1,5 +1,5 @@
 html {
-    background-color: aliceblue;
+    background-color: white;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
