--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -1,5 +1,5 @@
 html {
-    background-color:#fce8d9;
+    background-color:white;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -31,39 +31,6 @@ body {
     position: absolute;
     top: 30px;
     left: 60px;
-}
-#about {
-    position: absolute;
-    left: 50px;
-    top: 250px;
-}
-blockquote {
-    width: 300px;
-    font-family: avenir next, sans-serif;
-    font-size: 30px;
-    position: relative;
-    bottom: 40px;
-    right: 30px;
-    color: #565656;
-}
-.text {
-    position: absolute;
-    left: 480px;
-    top: 250px;
-}
-h4 {
-    font-family: avenir next, sans-serif;
-    font-size: 36px;
-    color:#31478b;
-}
-p {
-    font-family: avenir next, sans-serif;
-    font-size: 14px;
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count: 2;
-    margin: auto;
-    margin-right: 67px;
 }
 /*start of nav bar*/
 li {
@@ -101,24 +68,49 @@ a.navlinks:hover {
 
 }
 /*end of nav bar*/
-.box {
-    width: 300px;
-    height: 105px;
-    border: slategrey solid thick;
-    margin: auto;
-    margin-top: 200px;
-    padding: 30px;
+#about {
     position: absolute;
-    left: 60px;
-    top: 180px;
+    left: 50px;
+    top: 250px;
+}
+blockquote {
+    width: 300px;
+    font-family: avenir next, sans-serif;
+    font-size: 20px;
+    position: absolute;
+    right: -35px;
+    bottom: -13px;
+    color: #565656;
+    border: slategrey solid thick;
+    padding: 20px;
+    background: rgba(0, 50, 200, 0.2);
 }
 .box2 {
-    width: 304px;
-    height: 109px;
+    width: 284px;
+    height: 94px;
     border: slategrey solid thin;
     padding: 30px;
     position: relative;
-    top: -208px;
-    right: 25px;
     z-index: -1;
+    left: 60px;
+    top: 360px;
+}
+.text {
+    position: absolute;
+    left: 480px;
+    top: 240px;
+}
+h4 {
+    font-family: avenir next, sans-serif;
+    font-size: 36px;
+    color:#31478b;
+}
+p {
+    font-family: avenir next, sans-serif;
+    font-size: 14px;
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+    margin: auto;
+    margin-right: 67px;
 }
