--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -50,7 +50,7 @@ ul {
 }
 a.navlinks {
     display: block;
-    color: dimgrey;
+    color: white;
     padding-right: 70px;
     padding-left: 70px;
     text-decoration: none;
